@@ -23,3 +23,4 @@ t/Unicode-Block-Ascii/02-pod_coverage.t
 t/Unicode-Block-Ascii/03-pod.t
 t/Unicode-Block-Ascii/04-new.t
 t/Unicode-Block-Ascii/05-next.t
+t/Unicode-Block-Ascii/06-get.t
